<resources>
    <string name="app_name">PlannerApp</string>
    <string name="descriere">Descriere</string>
    <string name="heading">HEADING</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="or">or</string>
    <string name="register_here">Register Here</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="phone">phone</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_user_interface">UserInterface</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
</resources>
