<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#051f52"
    tools:context="com.example.calug.plannerapp.RegisterActivity">

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="?attr/actionModeSplitBackground" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="?attr/actionModeSplitBackground" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="183dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="?attr/actionModeSplitBackground" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="235dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="?attr/actionModeSplitBackground" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="?attr/actionModeSplitBackground" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="105dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/colorTransparentWhite"
        android:textColorLink="@android:color/darker_gray"
        android:textSize="16sp" />

</RelativeLayout>
