<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/man" />

    <TextView
        android:id="@+id/slide_heading"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/slide_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorTransparentWhite"/>

    <TextView
        android:id="@+id/slide_desc"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/descriere"
        android:textAlignment="center"
        android:textColor="@color/colorTransparentWhite" />
</RelativeLayout>