<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="com.example.calug.plannerapp.LoginActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="email"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:text="cal@gmail.com"
        android:textColorHint="#01091c" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="qwerty"
        android:layout_alignStart="@+id/etUsername"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColorHint="#01091c" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/colorTransparentWhite"
        android:onClick="send_text"
        android:text="@string/login"
        android:textColor="@color/colorTransparentWhite"
        android:textColorLink="@color/colorTransparentWhite"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/or"
        android:textColor="@color/colorTransparentWhite"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/etRegisterHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginBtn"
        android:layout_below="@+id/textView2"
        android:text="@string/register_here"
        android:textColor="@color/colorTransparentWhite"
        android:textColorLink="@color/colorTransparentWhite"
        android:linksClickable="true" />

</RelativeLayout>
